--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery Food</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css\normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css\normalize.css" />
+    <link rel="stylesheet" href="./css/animate.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <div class="container">
         <header class="header">
             <a href="index.html" class="logo">
-                <img src="img\logo.svg" alt="Logo">
+                <img src="img\logo.svg" alt="Logo" class="logo animated lightSpeedIn">
             </a>
             <input type="text" class="input input-address" placeholder="Адрес доставки" />
             <div class="buttons">
@@ -179,5 +180,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/wow.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
